(fix) [SDNTB-20] As a reporter or editor, I want the field labels in the content editor to be more readable and to be shown at all times.

--- a/scripts/superdesk-authoring/styles/authoring.less
+++ b/scripts/superdesk-authoring/styles/authoring.less
@@ -706,15 +706,6 @@
     line-height: 20px;
   }
 
-  // label {
-  //   display: inline-block;
-  //   min-width: 75px;
-  //   font-size: 11px;
-  //   line-height: 26px;
-  //   margin: 0;
-  //   color: #c0c0c0;
-  // }
-
   input.slugline {
     color: @sd-keyword;
     font-weight: 500;
@@ -804,7 +795,7 @@
         font-size: 11px;
         line-height: 26px;
         margin: 0;
-        color: #c0c0c0;
+        color: @sd-text-label;
         padding-right: 5px;
     }
 
