--- a/styles/less/variables.less
+++ b/styles/less/variables.less
@@ -42,7 +42,7 @@
 @label-prime:			      #61a9c6;
 @label-snap:			      #9761A0;
 
-@sd-text-label:         #9A9A9A;
+@sd-text-label:         #909090;
 
 
 @todo-color : 			    #b70000;
